# titanic-ml-project

./: Makefile  README.md  estructura.txt  pyproject.toml
cookiecutter_test_project/: __init__.py  dataset.py  features.py  plots.py
cookiecutter_test_project/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01_eda_titanic.ipynb
