[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cookiecutter_test_project"
version = "0.0.1"
description = "Proyecto de prueba cookiecutter"
authors = [
  { name = "Santiago de la Cuesta" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["cookiecutter_test_project"]
include = ["pyproject.toml", "cookiecutter_test_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["cookiecutter_test_project"]
force-sort-within-sections = true

